; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_sch_generic.c_qdisc_restart.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_sch_generic.c_qdisc_restart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Qdisc = type { i32 }
%struct.netdev_queue = type { i32 }
%struct.net_device = type { i32 }
%struct.sk_buff = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.Qdisc*)* @qdisc_restart to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qdisc_restart(%struct.Qdisc* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.Qdisc*, align 8
  %4 = alloca %struct.netdev_queue*, align 8
  %5 = alloca %struct.net_device*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.sk_buff*, align 8
  store %struct.Qdisc* %0, %struct.Qdisc** %3, align 8
  %8 = load %struct.Qdisc*, %struct.Qdisc** %3, align 8
  %9 = call %struct.sk_buff* @dequeue_skb(%struct.Qdisc* %8)
  store %struct.sk_buff* %9, %struct.sk_buff** %7, align 8
  %10 = load %struct.sk_buff*, %struct.sk_buff** %7, align 8
  %11 = icmp ne %struct.sk_buff* %10, null
  %12 = xor i1 %11, true
  %13 = zext i1 %12 to i32
  %14 = call i64 @unlikely(i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %32

17:                                               ; preds = %1
  %18 = load %struct.Qdisc*, %struct.Qdisc** %3, align 8
  %19 = call i32* @qdisc_lock(%struct.Qdisc* %18)
  store i32* %19, i32** %6, align 8
  %20 = load %struct.Qdisc*, %struct.Qdisc** %3, align 8
  %21 = call %struct.net_device* @qdisc_dev(%struct.Qdisc* %20)
  store %struct.net_device* %21, %struct.net_device** %5, align 8
  %22 = load %struct.net_device*, %struct.net_device** %5, align 8
  %23 = load %struct.sk_buff*, %struct.sk_buff** %7, align 8
  %24 = call i32 @skb_get_queue_mapping(%struct.sk_buff* %23)
  %25 = call %struct.netdev_queue* @netdev_get_tx_queue(%struct.net_device* %22, i32 %24)
  store %struct.netdev_queue* %25, %struct.netdev_queue** %4, align 8
  %26 = load %struct.sk_buff*, %struct.sk_buff** %7, align 8
  %27 = load %struct.Qdisc*, %struct.Qdisc** %3, align 8
  %28 = load %struct.net_device*, %struct.net_device** %5, align 8
  %29 = load %struct.netdev_queue*, %struct.netdev_queue** %4, align 8
  %30 = load i32*, i32** %6, align 8
  %31 = call i32 @sch_direct_xmit(%struct.sk_buff* %26, %struct.Qdisc* %27, %struct.net_device* %28, %struct.netdev_queue* %29, i32* %30)
  store i32 %31, i32* %2, align 4
  br label %32

32:                                               ; preds = %17, %16
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local %struct.sk_buff* @dequeue_skb(%struct.Qdisc*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32* @qdisc_lock(%struct.Qdisc*) #1

declare dso_local %struct.net_device* @qdisc_dev(%struct.Qdisc*) #1

declare dso_local %struct.netdev_queue* @netdev_get_tx_queue(%struct.net_device*, i32) #1

declare dso_local i32 @skb_get_queue_mapping(%struct.sk_buff*) #1

declare dso_local i32 @sch_direct_xmit(%struct.sk_buff*, %struct.Qdisc*, %struct.net_device*, %struct.netdev_queue*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
